ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/ia_Deliverable__c.object-meta.xml
<CustomObject>
    <description>To be attached to each Phase</description>
    <label>Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>