ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>ia_Phase__c</referenceTo>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>