ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/fields/Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>Resource_URL__c</fullName>
    <label>Resource Link</label>
    <type>Url</type>
</CustomField>