ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/fields/Stage_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Stage_Sort_Order__c</fullName>
    <label>Stage Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>