ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/recordTypes/IA_Method_2_0_Stages.recordType-meta.xml
<RecordType>
    <fullName>IA_Method_2_0_Stages</fullName>
    <active>true</active>
    <label>IA Method 2.0 Stages</label>
</RecordType>