ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/recordTypes/Prior_Stages.recordType-meta.xml
<RecordType>
    <fullName>Prior_Stages</fullName>
    <active>true</active>
    <label>Prior Stages</label>
</RecordType>