ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Stage_Sort_Order__c</columns>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ia_Deliverable__c.IA_Method_2_0_Stages</value>
    </filters>
    <label>All</label>
</ListView>