ConsultingHub/force-app/main/default/objects/ia_Deliverable__c/listViews/Prior_Stages.listView-meta.xml
<ListView>
    <fullName>Prior_Stages</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ia_Deliverable__c.Prior_Stages</value>
    </filters>
    <label>Prior Stages</label>
</ListView>